--- a/app/src/main/res/layout/content_menu.xml
+++ b/app/src/main/res/layout/content_menu.xml
@@ -21,7 +21,8 @@
             android:layout_centerHorizontal="true"
             android:text="MENU"
             android:textColor="@color/black"
-            android:textSize="36sp" />
+            android:textSize="36sp"
+            android:layout_marginTop="20dp" />
 
         <Button
             android:id="@+id/bubble_button"
