--- a/app/src/main/res/layout/content_menu_smoothie.xml
+++ b/app/src/main/res/layout/content_menu_smoothie.xml
@@ -21,7 +21,8 @@
             android:layout_centerHorizontal="true"
             android:text="SMOOTHIES / SLUSHIES"
             android:textColor="@color/black"
-            android:textSize="32sp" />
+            android:textSize="32sp"
+            android:layout_marginTop="20dp" />
 
         <TextView
             android:id="@+id/smoothies_submenu_text"
@@ -79,7 +80,7 @@
             android:layout_below="@+id/banana_smoothie_button"
             android:layout_centerHorizontal="true" />
         <Button
-            android:id="@+id/wild_rasberry_smoothie_button"
+            android:id="@+id/chocolate_smoothie_button"
             android:background="@color/colorBasic"
             android:clickable="false"
             android:text="Chocolate"
@@ -90,7 +91,7 @@
             android:layout_below="@+id/blueberry_smoothie_button"
             android:layout_centerHorizontal="true" />
         <Button
-            android:id="@+id/chai_spice_smoothie_button"
+            android:id="@+id/coconut_smoothie_button"
             android:background="@color/colorBasic"
             android:clickable="false"
             android:text="Coconut"
@@ -98,18 +99,316 @@
             android:textSize="20sp"
             android:layout_width="match_parent"
             android:layout_height="70dp"
-            android:layout_below="@+id/wild_rasberry_smoothie_button"
+            android:layout_below="@+id/chocolate_smoothie_button"
             android:layout_centerHorizontal="true" />
         <Button
             android:id="@+id/green_tea_smoothie_button"
             android:background="@color/colorBasic"
             android:clickable="false"
-            android:text="Coconut"
+            android:text="Green Tea"
             android:textAlignment="center"
             android:textSize="20sp"
             android:layout_width="match_parent"
             android:layout_height="70dp"
-            android:layout_below="@+id/chai_spice_smoothie_button"
+            android:layout_below="@+id/coconut_smoothie_button"
             android:layout_centerHorizontal="true" />
+        <Button
+            android:id="@+id/honeydew_smoothie_button"
+            android:background="@color/colorBasic"
+            android:clickable="false"
+            android:text="Honeydew"
+            android:textAlignment="center"
+            android:textSize="20sp"
+            android:layout_width="match_parent"
+            android:layout_height="70dp"
+            android:layout_below="@+id/green_tea_smoothie_button"
+            android:layout_centerHorizontal="true" />
+        <Button
+            android:id="@+id/jasmine_smoothie_button"
+            android:background="@color/colorBasic"
+            android:clickable="false"
+            android:text="Jasmine"
+            android:textAlignment="center"
+            android:textSize="20sp"
+            android:layout_width="match_parent"
+            android:layout_height="70dp"
+            android:layout_below="@+id/honeydew_smoothie_button"
+            android:layout_centerHorizontal="true" />
+        <Button
+            android:id="@+id/mango_smoothie_button"
+            android:background="@color/colorBasic"
+            android:clickable="false"
+            android:text="Mango"
+            android:textAlignment="center"
+            android:textSize="20sp"
+            android:layout_width="match_parent"
+            android:layout_height="70dp"
+            android:layout_below="@+id/jasmine_smoothie_button"
+            android:layout_centerHorizontal="true" />
+        <Button
+            android:id="@+id/milk_tea_smoothie_button"
+            android:background="@color/colorBasic"
+            android:clickable="false"
+            android:text="Milk Tea"
+            android:textAlignment="center"
+            android:textSize="20sp"
+            android:layout_width="match_parent"
+            android:layout_height="70dp"
+            android:layout_below="@+id/mango_smoothie_button"
+            android:layout_centerHorizontal="true" />
+        <Button
+            android:id="@+id/papaya_smoothie_button"
+            android:background="@color/colorBasic"
+            android:clickable="false"
+            android:text="Papaya"
+            android:textAlignment="center"
+            android:textSize="20sp"
+            android:layout_width="match_parent"
+            android:layout_height="70dp"
+            android:layout_below="@+id/milk_tea_smoothie_button"
+            android:layout_centerHorizontal="true" />
+        <Button
+            android:id="@+id/red_bean_smoothie_button"
+            android:background="@color/colorBasic"
+            android:clickable="false"
+            android:text="Red Bear"
+            android:textAlignment="center"
+            android:textSize="20sp"
+            android:layout_width="match_parent"
+            android:layout_height="70dp"
+            android:layout_below="@+id/papaya_smoothie_button"
+            android:layout_centerHorizontal="true" />
+        <Button
+            android:id="@+id/strawberry_smoothie_button"
+            android:background="@color/colorBasic"
+            android:clickable="false"
+            android:text="Strawberry"
+            android:textAlignment="center"
+            android:textSize="20sp"
+            android:layout_width="match_parent"
+            android:layout_height="70dp"
+            android:layout_below="@+id/red_bean_smoothie_button"
+            android:layout_centerHorizontal="true" />
+        <Button
+            android:id="@+id/taro_smoothie_button"
+            android:background="@color/colorBasic"
+            android:clickable="false"
+            android:text="Taro"
+            android:textAlignment="center"
+            android:textSize="20sp"
+            android:layout_width="match_parent"
+            android:layout_height="70dp"
+            android:layout_below="@+id/strawberry_smoothie_button"
+            android:layout_centerHorizontal="true" />
+        <Button
+            android:id="@+id/thai_smoothie_button"
+            android:background="@color/colorBasic"
+            android:clickable="false"
+            android:text="Thai"
+            android:textAlignment="center"
+            android:textSize="20sp"
+            android:layout_width="match_parent"
+            android:layout_height="70dp"
+            android:layout_below="@+id/taro_smoothie_button"
+            android:layout_centerHorizontal="true" />
+        <Button
+            android:id="@+id/watermelon_smoothie_button"
+            android:background="@color/colorBasic"
+            android:clickable="false"
+            android:text="Watermelon"
+            android:textAlignment="center"
+            android:textSize="20sp"
+            android:layout_width="match_parent"
+            android:layout_height="70dp"
+            android:layout_below="@+id/thai_smoothie_button"
+            android:layout_centerHorizontal="true" />
+        <Button
+            android:id="@+id/kiwi_smoothie_button"
+            android:background="@color/colorBasic"
+            android:clickable="false"
+            android:text="Kiwi"
+            android:textAlignment="center"
+            android:textSize="20sp"
+            android:layout_width="match_parent"
+            android:layout_height="70dp"
+            android:layout_below="@+id/watermelon_smoothie_button"
+            android:layout_centerHorizontal="true" />
+        <Button
+            android:id="@+id/acai_smoothie_button"
+            android:background="@color/colorBasic"
+            android:clickable="false"
+            android:text="Acai"
+            android:textAlignment="center"
+            android:textSize="20sp"
+            android:layout_width="match_parent"
+            android:layout_height="70dp"
+            android:layout_below="@+id/kiwi_smoothie_button"
+            android:layout_centerHorizontal="true" />
+        <Button
+            android:id="@+id/cherry_smoothie_button"
+            android:background="@color/colorBasic"
+            android:clickable="false"
+            android:text="Cherry"
+            android:textAlignment="center"
+            android:textSize="20sp"
+            android:layout_width="match_parent"
+            android:layout_height="70dp"
+            android:layout_below="@+id/acai_smoothie_button"
+            android:layout_centerHorizontal="true" />
+        <Button
+            android:id="@+id/green_apple_smoothie_button"
+            android:background="@color/colorBasic"
+            android:clickable="false"
+            android:text="Green Apple"
+            android:textAlignment="center"
+            android:textSize="20sp"
+            android:layout_width="match_parent"
+            android:layout_height="70dp"
+            android:layout_below="@+id/cherry_smoothie_button"
+            android:layout_centerHorizontal="true" />
+        <Button
+            android:id="@+id/guava_smoothie_button"
+            android:background="@color/colorBasic"
+            android:clickable="false"
+            android:text="Guava"
+            android:textAlignment="center"
+            android:textSize="20sp"
+            android:layout_width="match_parent"
+            android:layout_height="70dp"
+            android:layout_below="@+id/green_apple_smoothie_button"
+            android:layout_centerHorizontal="true" />
+        <Button
+            android:id="@+id/kumquat_smoothie_button"
+            android:background="@color/colorBasic"
+            android:clickable="false"
+            android:text="Kumquat"
+            android:textAlignment="center"
+            android:textSize="20sp"
+            android:layout_width="match_parent"
+            android:layout_height="70dp"
+            android:layout_below="@+id/guava_smoothie_button"
+            android:layout_centerHorizontal="true" />
+        <Button
+            android:id="@+id/pina_colada_smoothie_button"
+            android:background="@color/colorBasic"
+            android:clickable="false"
+            android:text="Pina Colada"
+            android:textAlignment="center"
+            android:textSize="20sp"
+            android:layout_width="match_parent"
+            android:layout_height="70dp"
+            android:layout_below="@+id/kumquat_smoothie_button"
+            android:layout_centerHorizontal="true" />
+        <Button
+            android:id="@+id/margarita_smoothie_button"
+            android:background="@color/colorBasic"
+            android:clickable="false"
+            android:text="Margarita"
+            android:textAlignment="center"
+            android:textSize="20sp"
+            android:layout_width="match_parent"
+            android:layout_height="70dp"
+            android:layout_below="@+id/pina_colada_smoothie_button"
+            android:layout_centerHorizontal="true" />
+        <Button
+            android:id="@+id/lemon_smoothie_button"
+            android:background="@color/colorBasic"
+            android:clickable="false"
+            android:text="Lemon"
+            android:textAlignment="center"
+            android:textSize="20sp"
+            android:layout_width="match_parent"
+            android:layout_height="70dp"
+            android:layout_below="@+id/margarita_smoothie_button"
+            android:layout_centerHorizontal="true" />
+        <Button
+            android:id="@+id/lychee_smoothie_button"
+            android:background="@color/colorBasic"
+            android:clickable="false"
+            android:text="Lychee"
+            android:textAlignment="center"
+            android:textSize="20sp"
+            android:layout_width="match_parent"
+            android:layout_height="70dp"
+            android:layout_below="@+id/lemon_smoothie_button"
+            android:layout_centerHorizontal="true" />
+        <Button
+            android:id="@+id/mint_smoothie_button"
+            android:background="@color/colorBasic"
+            android:clickable="false"
+            android:text="Mint"
+            android:textAlignment="center"
+            android:textSize="20sp"
+            android:layout_width="match_parent"
+            android:layout_height="70dp"
+            android:layout_below="@+id/lychee_smoothie_button"
+            android:layout_centerHorizontal="true" />
+        <Button
+            android:id="@+id/orange_smoothie_button"
+            android:background="@color/colorBasic"
+            android:clickable="false"
+            android:text="Orange"
+            android:textAlignment="center"
+            android:textSize="20sp"
+            android:layout_width="match_parent"
+            android:layout_height="70dp"
+            android:layout_below="@+id/mint_smoothie_button"
+            android:layout_centerHorizontal="true" />
+        <Button
+            android:id="@+id/passionfruit_smoothie_button"
+            android:background="@color/colorBasic"
+            android:clickable="false"
+            android:text="Passion Fruit"
+            android:textAlignment="center"
+            android:textSize="20sp"
+            android:layout_width="match_parent"
+            android:layout_height="70dp"
+            android:layout_below="@+id/orange_smoothie_button"
+            android:layout_centerHorizontal="true" />
+        <Button
+            android:id="@+id/peach_smoothie_button"
+            android:background="@color/colorBasic"
+            android:clickable="false"
+            android:text="Peach"
+            android:textAlignment="center"
+            android:textSize="20sp"
+            android:layout_width="match_parent"
+            android:layout_height="70dp"
+            android:layout_below="@+id/passionfruit_smoothie_button"
+            android:layout_centerHorizontal="true" />
+        <Button
+            android:id="@+id/pomegranate_smoothie_button"
+            android:background="@color/colorBasic"
+            android:clickable="false"
+            android:text="Pomegranate"
+            android:textAlignment="center"
+            android:textSize="20sp"
+            android:layout_width="match_parent"
+            android:layout_height="70dp"
+            android:layout_below="@+id/peach_smoothie_button"
+            android:layout_centerHorizontal="true" />
+        <Button
+            android:id="@+id/pineapple_smoothie_button"
+            android:background="@color/colorBasic"
+            android:clickable="false"
+            android:text="Pineapple"
+            android:textAlignment="center"
+            android:textSize="20sp"
+            android:layout_width="match_parent"
+            android:layout_height="70dp"
+            android:layout_below="@+id/pomegranate_smoothie_button"
+            android:layout_centerHorizontal="true" />
+        <Button
+            android:id="@+id/yogurt_smoothie_button"
+            android:background="@color/colorBasic"
+            android:clickable="false"
+            android:text="Yogurt"
+            android:textAlignment="center"
+            android:textSize="20sp"
+            android:layout_width="match_parent"
+            android:layout_height="70dp"
+            android:layout_below="@+id/pineapple_smoothie_button"
+            android:layout_centerHorizontal="true" />
+
     </android.widget.RelativeLayout>
 </ScrollView>
