--- a/app/src/main/res/layout/content_landing_page.xml
+++ b/app/src/main/res/layout/content_landing_page.xml
@@ -141,7 +141,7 @@
             android:background="@color/black"
             android:layout_marginTop="25dp"
             android:layout_marginBottom="30dp"
-            android:text="@string/save"
+            android:text="@string/edit"
             android:textColor="@color/white" />
     </android.widget.RelativeLayout>
 </ScrollView>
